--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-python-telegram-bot
-pymongo
-dnspython
-flask
-google-generativeai
-psutil
-pytz
-edge-tts
-Pillow
-yt-dlp==2024.7.23.232906.dev0
-tgcrypto==1.2.5
-
-# MTProto + voice
-pyrogram==1.4.16
-py-tgcalls==0.8.6
+python-telegram-bot>=21.0
+pymongo>=4.6
+flask>=3.0
+# Voice call library - critical fix
+py-tgcalls>=2.0.0
+pyrogram>=2.0.0
+tgcrypto>=1.2.5
+# Other dependencies
+yt-dlp>=2024.7
+Pillow>=10.3
+google-genai>=0.3.0
+psutil>=5.9
+pytz>=2024.1
+edge-tts>=6.1
+dnspython>=2.4
