--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ youtube-search-python
 aiohttp
 aiofiles
 httpx==0.27.2
+groq
 git+https://github.com/KurimuzonAkuma/pyrogram
 git+https://github.com/yt-dlp/yt-dlp
 
